# webserv

./: .gitignore  CI_CD_handnote.md  Makefile  README.md  Webserv.drawio
img/: manage_fork.md
srcs/: main.cpp  start_http.cpp  utils.cpp
webservProject/: .gitignore  Makefile  main.cpp  main_test.cpp
webservProject/configs/: default copy.conf  default.conf
webservProject/http/: Http.cpp  Http.hpp  HttpV1.cpp  HttpV2.cpp  Httptest.cpp  Makefile  Request.cpp  Response.cpp  ResponseV2.cpp  cgi.cpp
webservProject/include/: Server.hpp
webservProject/network/: .gitignore  Makefile  Server.cpp  Server.hpp  createNewSocket.cpp  default.conf  start_http.cpp  start_server.cpp  utils.cpp
webservProject/network1/: .gitignore  Makefile  Server.cpp  Server.hpp
webservProject/parser/: .gitignore  AConfig.cpp  AConfigPairStringString.cpp  AConfigVectorString.cpp  AConfigs.cpp  Allow.cpp  Cgi_exe.cpp  (+12 more)
webservProject/parser/tester/: CMakeLists.txt  HttpBlock.cpp  LocationBlock.cpp  Makefile  ServerBlock.cpp  default.conf  main.cpp  webserve
webservProject/parser/tester/FileConfTest/TestHttpBlock/: CompleteBracket.txt  NotCompleteBracket.txt  test_1_error.txt  test_2_error.txt  test_3_error.txt  unknowToken.txt
webservProject/parser/tester/FileConfTest/TestLocationBlock/: test_1_error.txt
webservProject/parser/tester/FileConfTest/TestServerBlock/: not_have_root.txt  test_1_error.txt  test_2_error.txt  test_3_error.txt  test_4_error.txt  test_5_error.txt  test_6_error.txt  test_duplicate_root_in_server.txt
webservProject/parser/tester/TestConfigMethod/: GetRoot.cpp
(+25 files in other folders)
